[package]
name = "askur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.18"
futures = "0.3.28"
async-trait = "0.1.68"
redis = { version = "0.23.0", features = ["tokio-comp"] }
clippy = "0.0.302"
regex = "1.8.1"
actix-web = "4.3.1"
paperclip = "0.8.0"
paperclip-actix = "0.6.0"

